# wand

./: .gitignore  Cargo.toml  LICENSE_MIT
crates/wand/: Cargo.toml
crates/wand-cli/: Cargo.toml
crates/wand-cli/data/: wand.wasm
crates/wand-cli/src/: main.rs  slice.rs  traits.rs  wasm.rs
crates/wand/src/: emitter.rs  error.rs  lib.rs  string.rs
script/: all.sh  build-cli.sh  build-wasm.sh  build.sh  run.sh  utils.sh
src/: lib.rs  panic.rs  string.rs  transpile.rs  writer.rs
