[package]
authors = ["Yehuda Katz <wycats@gmail.com>"]
edition = "2018"
name = "wand"
version = "0.1.0"

[dependencies]
swc_common = "0.10.9"
swc_ecma_codegen = "0.45.1"
swc_ecma_parser = "0.47.2"
swc_ecma_visit = "0.24.0"
wasm-bindgen = "0.2.70"
wee_alloc = "0.4.5"

[dependencies.swc_ecma_ast]
version = "0.38.0"

[dependencies.swc_ecma_transforms]
features = ["swc_ecma_transforms_typescript"]
version = "0.35.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[lib]
crate-type = ["cdylib"]

[profile]

[profile.dev]
opt-level = 0
panic = "abort"

[workspace]
members = [".", "crates/wand-cli"]
