[package]
name = "wand-cli"
version = "0.1.0"
authors = ["Yehuda Katz <wycats@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.38"
crate = "0.0.2"
extern = "0.0.0"
tracing-subscriber = "0.2.15"
wasmtime = { version = "0.22.0", features = ["experimental_x64", "cache"] }
